--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/three": "^10.0.3",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
+    "@vercel/analytics": "^1.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
